syntax = "proto3";

package Protocol;

message ProxyLoginReq{
    int32 serverType = 1;
}